# Server-NxtLAP

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOY.md  README.md  THESPORTSDB_FIELDS.md  response2.json  standings_response.json  test-news-api.sh  verify_api.py
News Server/: .gitignore  Cargo.toml  test-event.json
News Server/events/: scheduled-event.json
News Server/news-api/: Cargo.toml
News Server/news-api/src/: main.rs
News Server/news-fetcher/: Cargo.toml
News Server/news-fetcher/src/: main.rs
News Server/scripts/: build.sh  deploy.sh
News Server/shared/: Cargo.toml
News Server/shared/src/: dynamodb_service.rs  lib.rs  models.rs  rss_client.rs
api-handler/: Cargo.toml
api-handler/src/: main.rs
data-fetcher/: Cargo.toml
data-fetcher/src/: main.rs
events/: scheduled-event.json
scripts/: build-rust.sh  deploy-rust.sh  deploy-staging.sh  enable-ttl.sh
shared/: Cargo.toml
shared/src/: aggregator.rs  dynamodb_service.rs  lib.rs  models.rs  motogp_client.rs  openf1_client.rs  thesportsdb_client.rs
