[workspace]
members = ["news-fetcher", "news-api", "shared"]
resolver = "2"

[workspace.dependencies]
# AWS SDK — pinned to match existing workspace (rustc 1.88 compatible)
aws-config = { version = "=1.8.12", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "=1.103.0"

# Lambda
lambda_runtime = "0.11"
lambda_http = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# XML parsing (RSS feeds)
roxmltree = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling & logging
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
