[package]
name = "api-handler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-handler"
path = "src/main.rs"

[[bin]]
name = "api-handler-staging"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

