[package]
name = "data-fetcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-fetcher"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

