[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

