[package]
name = "news-fetcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "news-fetcher"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
